--- a/.github/workflows/monthly.yml
+++ b/.github/workflows/monthly.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         sudo apt-get remove --purge firefox powershell && sudo apt-get autoremove
         sudo apt-get -y upgrade
-        sudo apt-get update && sudo apt-get install dnsutils
+        sudo apt-get update && sudo apt-get install coreutils dnsutils
 
     - run: git pull
 
@@ -46,7 +46,7 @@ jobs:
       run: |
         git config --local user.email "dotless-check@avl.la"
         git config --local user.name "Dotless Domains GitHub Action"
-        git add dotless.txt
+        git add .
         git commit -m "[bot] check dotless ($(date -u +"%Y-%m-%d %H:%M"))" || exit 0
         git pull --rebase
         git push || (git pull --rebase && git push) || (sleep 30 && git pull --rebase && git push)
