--- a/.github/workflows/monthly.yml
+++ b/.github/workflows/monthly.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         git config --local user.email "dotless-check@avl.la"
         git config --local user.name "Dotless Domains GitHub Action"
-        git add .
+        git add script.sh dotless.txt
         git commit -m "[bot] check dotless ($(date -u +"%Y-%m-%d %H:%M"))" || exit 0
         git pull --rebase
         git push || (git pull --rebase && git push) || (sleep 30 && git pull --rebase && git push)
