--- a/.github/workflows/monthly.yml
+++ b/.github/workflows/monthly.yml
@@ -1,9 +1,9 @@
-name: Monthly zone check
+name: Bimonthly domain check
 
 on:
   schedule:
-    # Runs at 12:00 UTC on the first of every month
-    - cron: '0 12 1 * *'
+    # Runs at noon UTC on the first and 14th of every month
+    - cron: '0 12 1,14 * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
